<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.cii.messaging</groupId>
	<artifactId>cii-messaging-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>CII Messaging Parent</name>
	<description>Parent POM for Cross Industry Invoice messaging system</description>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Dependencies versions -->
		<jakarta.xml.bind.version>4.0.1</jakarta.xml.bind.version>
		<jaxb-runtime.version>4.0.3</jaxb-runtime.version>
		<jaxb-impl.version>4.0.4</jaxb-impl.version>
		<mustang.version>2.18.0</mustang.version>
		<phax.version>3.1.0</phax.version>
		<xerces.version>2.12.2</xerces.version>
		<saxon.version>12.3</saxon.version>
		<junit.version>5.10.1</junit.version>
		<jackson.version>2.16.0</jackson.version>
		<slf4j.version>2.0.9</slf4j.version>
		<logback.version>1.4.14</logback.version>
		<lombok.version>1.18.30</lombok.version>
	</properties>

	<modules>
		<module>cii-model</module>
		<module>cii-reader</module>
		<module>cii-writer</module>
		<module>cii-validator</module>
		<module>cii-service</module>
		<module>cii-cli</module>
		<module>cii-samples</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<!-- JAXB -->
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>${jakarta.xml.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${jaxb-impl.version}</version>
			</dependency>

			<!-- Mustang Project for ZUGFeRD/CII -->
			<dependency>
				<groupId>org.mustangproject</groupId>
				<artifactId>library</artifactId>
				<version>${mustang.version}</version>
			</dependency>

			<!-- Phax for CII/UBL conversion -->
			<dependency>
				<groupId>com.helger.cii</groupId>
				<artifactId>ph-cii-d16b</artifactId>
				<version>${phax.version}</version>
			</dependency>
			<dependency>
				<groupId>com.helger.cii</groupId>
				<artifactId>ph-cii-d20b</artifactId>
				<version>${phax.version}</version>
			</dependency>

			<!-- XML Processing -->
			<dependency>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
				<version>${xerces.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sf.saxon</groupId>
				<artifactId>Saxon-HE</artifactId>
				<version>${saxon.version}</version>
			</dependency>

			<!-- JSON Processing -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-xml</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<!-- Logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>

			<!-- Utilities -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- Testing -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
